<resources>
    <string name="app_name">DiabetesEducation</string>

    <string name="parent_0">당뇨병이란?</string>
    <string name="parent_1">혈당 측정 및 관리</string>
    <string name="parent_2">올바른 식사요법</string>
    <string name="parent_3">올바른 운동요법</string>
    <string name="parent_4">경구용 혈당 강하제</string>
    <string name="parent_5">인슐린 주사법</string>
    <string name="parent_6">저혈당 관리</string>
    <string name="parent_7">아픈날의 관리</string>
    <string name="parent_8">건강한 발 관리방법</string>

    <string name="child_parent_00">당뇨병의 종류와 원인</string>
    <string name="child_parent_01">당뇨병 이란?</string>
    <string name="child_parent_02">당뇨병의 증상</string>
    <string name="child_parent_03">당뇨병의 정기검진</string>
    <string name="child_parent_04">당뇨병의 진단</string>

    <string name="child_parent_10">자가혈당 측정을 해야하는 이유</string>
    <string name="child_parent_11">혈당측정법</string>
    <string name="child_parent_12">혈당 조절 목표</string>
    <string name="child_parent_13">혈당 검사 시간</string>

    <string name="child_parent_20">식사요법의 3원칙</string>
    <string name="child_parent_21">나의 표준체중과 1일 필요열량</string>
    <string name="child_parent_22">식품교환표</string>
    <string name="child_parent_23">당뇨식 상차림의 예</string>

    <string name="child_parent_30">운동전 평가</string>
    <string name="child_parent_31">운동방법</string>
    <string name="child_parent_32">효과적인 운동을 위하여 알아둘 점</string>


    <string name="child_parent_40">설폰요소계</string>
    <string name="child_parent_41">비구아나이드계</string>
    <string name="child_parent_42">알파글루코시다제억제제</string>
    <string name="child_parent_43">치아졸리딘디온계</string>
    <string name="child_parent_44">인크레틴제제</string>
    <string name="child_parent_45">약물상호작용</string>

    <string name="child_parent_50">인슐린이란?</string>
    <string name="child_parent_51">인슐린의 종류와 작용시간</string>
    <string name="child_parent_52">인슐린주사시간과 모양</string>
    <string name="child_parent_53">인슐린 주사부위</string>
    <string name="child_parent_54">인슐린의 보관방법</string>
    <string name="child_parent_55">인슐린주사시 주의사항</string>
    <string name="child_parent_56">인슐린 펌프</string>

    <string name="child_parent_60">저혈당이란?</string>
    <string name="child_parent_61">저혈당의 증상</string>
    <string name="child_parent_62">저혈당의 대처방법</string>
    <string name="child_parent_63">야간 저혈당</string>

    <string name="child_parent_70">아픈날의 몸의 변화</string>
    <string name="child_parent_71">아픈날의 관리방법</string>

    <string name="child_parent_80">발관리의 중요성</string>
    <string name="child_parent_81">발관리 방법</string>
    <string name="child_parent_82">발의 피부상태 관찰하기</string>
    <string name="child_parent_83">당뇨병성 발의 합병증 예방을 위한 지침</string>

    <string name="parent_2_0"> 당뇨병 </string>
    <string name="parent_2_1"> 공복혈당 </string>
    <string name="parent_2_2"> 저혈당 </string>
    <string name="parent_2_3"> 당화혈색소 </string>
    <string name="parent_2_4"> 당뇨 지식 </string>
    <string name="parent_2_5"> 자가 간호 </string>
    <string name="parent_2_6"> 당뇨 자기 관리 </string>
    <string name="parent_2_7"> 혈당강하제 </string>
    <string name="parent_2_8"> 내당능장애 </string>
    <string name="parent_2_9"> 동맥경화 </string>
    <string name="parent_2_10"> 포도당 </string>
    <string name="parent_2_11"> 인슐린 </string>
    <string name="parent_2_12"> 당부하검사 </string>
    <string name="parent_2_13"> 인슐린 저항성 </string>
    <string name="parent_2_14"> 고혈압 </string>

    <string name="child_parent_2_00"> 혈액 속의 포도당 수치가 정상인보다\n높아 몸에서 포도당이 소변으로\n배출됩니다. </string>
    <string name="child_parent_2_01"> 8시간 이상 칼로리 섭취를 하지 않고\n정맥에서 채혈해서 뽑은 혈액입니다. </string>
    <string name="child_parent_2_02"> 혈당이 70mg/dL 이하로 내려가는\n경우를 말하며,\n대개 관련 증상이 있습니다. </string>
    <string name="child_parent_2_03"> 혈당이 증가되어 적혈구에 있는\n혈색소에 포도당이 붙은 상태입니다.\n지난 2-3개월간의 평균 혈당 농도를\n정확히 파악할 수 있는 측정 수치이다. </string>
    <string name="child_parent_2_04"> 당뇨병의 병인, 증상 및 질병 조절을\n위한 처방 지침에 대한 환자의\n지식의 정도를 의미한다. </string>
    <string name="child_parent_2_05"> 성숙되어 가는 개인 자신의 생명과\n건강한 기능 상태를 유지하고\n개인적 발전을 이루기 위하여 시작하고\n수행하는 행위를 의미한다. </string>
    <string name="child_parent_2_06"> 스스로 식이나 운동 등 생활 습관을\n관리하고 혈당을 모니터링하는\n자기관리를 실천하는 것을 의미힌다. </string>
    <string name="child_parent_2_07"> 당뇨병으로 인한 혈당을 내리기 위해\n먹는 약이다. </string>
    <string name="child_parent_2_08"> 혈당치가 정상과 당뇨병의 중간에\n있음을 의미한다.\n당뇨병이 심하지 않다고 하여도\n동맥경화증을 일으킬 수 있으므로\n반드시 치료해야 한다. </string>
    <string name="child_parent_2_09"> 혈관 내벽에 생기며 점차 혈관을 좁게\n하는 문제점이 있다. </string>
    <string name="child_parent_2_10"> 체내에서 연료로 사용되는\n당의 가장 단순한 형태로\n탄수화물의 소화를 통해 만들어지며\n혈액을 통해 세포로 운반된다. </string>
    <string name="child_parent_2_11"> 혈당이 세포 안으로 들어갈 수 있도록\n세포의 잠긴 문(수용체)을 열어주는\n열쇠와 같은 작용을 하여\n혈당을 정상 범위로 유지시켜 주는\n역할을 합니다. </string>
    <string name="child_parent_2_12"> 당뇨병 검사법 중의 하나로 당뇨, 임신성\n당뇨, 당대사이상 등을 정확하게\n진단할 수 있다. </string>
    <string name="child_parent_2_13"> 몸에서 인슐린의 적용이 감소된\n것을 의미한다.\n인슐린의 기능이 떨어져 세포가\n포도당을 효과적으로 연소하지\n못하는 것을 말한다. </string>
    <string name="child_parent_2_14"> 혈압이 정상치보다 높은 경우입니다. </string>

    <string name="oops1"> EDUCATION </string>
    <string name="oops2"> 용 어 </string>
    <string name="oops3"> 메뉴얼 </string>
    <string name="oops4"> 확인 </string>

    <string name="dialog_title"> 앱정보 </string>
    <string name="dialog_content"> 문해력이 낮은 어르신들을 위한 교육용 앱으로, 이해하기 쉽게 제작하였습니다.\n------도움주신분들------\nMANUAL액티비티 제작자 : 박제창\n자바+안드로이드를 다루는 기술\n안드로이드 앱 프로그래밍\n다이얼로그 소스 참고 : 키위남블로그\n리사이클러뷰 소스 참고 : 김정현의 안드로이드 코딩 여행기 블로그\n등등 도움주신 여러분들 감사합니다. </string>
    <string name="dialog_title2"> 개발자정보 </string>
    <string name="dialog_content2"> 평범한 대학교 전자공학 4학년 양지훈입니다.\n잘 부탁드리겠습니다. </string>

    <string name="toolbar_text">MAIN</string>
    <string name="ok">확인</string>

    <!--리사이클러뷰-->
    <string name="name">이 름</string>
    <string name="grade">학 력</string>
    <string name="assign">담 당</string>

    <!--메뉴 4개-->
    <string name="menu1">1. 당뇨그루에 대해</string>
    <string name="menu2">2. 버전정보</string>
    <string name="menu2_0">버전정보</string>
    <string name="menu3">3. 개발자정보</string>
    <string name="menu4">4. Change log</string>


    <!--메뉴 1. 인트로 내용-->
    <string name="Intro_content">안녕하세요! ‘당뇨그루’는 강원대학교 전자공학전공 E-LAB 연구실에서 차세대 당뇨 자기관리 연구를 위한 당뇨 자기관리 프로젝트입니다.

한국은 당뇨병 유병률이 꾸준히 증가하고 있으며 더 이상의 개인 질병이 아닌 중요한 국면 질환이 되었습니다.
당뇨병은 약물치료뿐만 아니라 식단과 운동, 혈당관리 등의 자기관리가 매우 중요합니다.
이를 앱으로 쉽고 간편하게 실시간 확인하며 피드백하기 위하여 앱 개발을 시작하였습니다.
당뇨그루는 당뇨 자기관리를 위한 식이요법 관리, 운동관리, 투약, 신체 활동을 기존의 방식에서 벗어난 차세대 프로젝트로 환자의 무자각 상태에서 당뇨그루에서 개발한 자동 기록 디바이스를 통해 자동 전송 및 기록되어 불편함을 해소할 것입니다,

식이요법 관리 애플리케이션은 스마트 식판을 자체 제작하여 저희의 식품교환표에 매칭하여 식단의 칼로리 정보를 알려줍니다. 이를 토대로 사용자는 부족한 식품요소를 확인, 균형 잡힌 식사를 구성할 수 있습니다. 애플리케이션으로 사진 전송을 하여 기록도 가능합니다.
운동 앱은 에르고미터, 트레드밀과 연동하여 사용자의 운동 시간, 속도, 소모 칼로리 등을 확인하고 저장할 수 있습니다. 각자 태그를 이용하여 사용자별로 저장 가능하며 장치를 두고 운동한 경우 연결 시 운동했던 데이터 수신이 가능합니다.
투약 앱은 니들 저장 케이스를 제작하여 니들 잔여 개수를 확인 가능하고 사용 시 카운팅합니다. 동시에 애플리케이션으로 투여 약품과 투여 시간을 전송합니다. 사용자가 투여할 시간을 설정하는 알람 기능도 추가하였습니다.
신체 활동은 웨어러블형 밴드와 연결하여 사용자의 실시간 심박수를 수신하여 확인할 수 있습니다, 추후에는 자기관리를 위한 방식 모든 기능을 업데이트할 예정이니 많은 관심 부탁드립니다.
추가로 당뇨병에 관한 정보와 용어를 설명해주는 교육용 애플리케이션도 있습니다.

앱 메뉴에 앱 정보와 개발자 정보, 사용법을 포함하였으니 한 번씩 읽어주시기 바랍니다.
앱 내용 및 디자인의 모든 것은 사용자를 위하여 제작하였으며, 무자각 상태에서 자동 전송과 기록 그리고 사용자의 편리함을 우선시하였습니다.
이 앱을 사용함으로써 당뇨인들의 당뇨 지식이 향상되고 자기관리수준이 높아지길 기대합니다.
</string>

    <!--임시 : 최신입니다.-->
    <string name="update_good">현재 버전은 최신입니다.</string>

    <!--개발자정보-->
    <!--ex-->
    <string name="develop_name0">뿡뿡이</string>
    <string name="develop_grade0">강원대학교 전자공학전공 3학년</string>
    <string name="develop_email0">abdcdefg123456@daum.net</string>
    <string name="develop_call0">010-0000–0000</string>
    <string name="develop_assign0">총괄</string>
    <!--1-->
    <string name="develop_name1">양지훈</string>
    <string name="develop_grade1">강원대학교 전자공학전공 4학년</string>
    <string name="develop_email1">kms6742@naver.com</string>
    <string name="develop_call1">010-5104-7274</string>
    <string name="develop_assign1">교육 앱 제작</string>
    <!--2-->
    <string name="develop_name2"></string>
    <string name="develop_grade2"></string>
    <string name="develop_email2"></string>
    <string name="develop_call2"></string>
    <string name="develop_assign2"></string>
    <!--3-->
    <string name="develop_name3"></string>
    <string name="develop_grade3"></string>
    <string name="develop_email3"></string>
    <string name="develop_call3"></string>
    <string name="develop_assign3"></string>


</resources>
