<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="250dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu2_0"
        android:fontFamily="@font/my_font_family"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="#000000"/>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:src="@drawable/app_icon_ex" />

    <!--임시로 "최신입니다."를 넣어두겠습니다.-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="79dp"
        android:gravity="center_horizontal"
        android:text="@string/update_good"
        android:fontFamily="@font/my_font_family"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/ok"
        android:fontFamily="@font/my_font_family"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="#000000"/>
</RelativeLayout>